RESOLVED FIXED268348
REGRESSION(267658@main): `font-variant-emoji` values should not parse in `font-variant` shorthand when disabled
https://bugs.webkit.org/show_bug.cgi?id=268348
Summary REGRESSION(267658@main): `font-variant-emoji` values should not parse in `fon...
Tim Nguyen (:ntim)
Reported 2024-01-29 16:39:32 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-29 16:39:42 PST
Tim Nguyen (:ntim)
Comment 2 2024-01-29 16:47:29 PST
EWS
Comment 3 2024-01-29 17:44:26 PST
Committed 273710@main (8c6d87c471e4): <https://commits.webkit.org/273710@main> Reviewed commits have been landed. Closing PR #23478 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.