Cherry-pick 8c6d87c471e4. rdar://121890028

REGRESSION(267658@main): `font-variant-emoji` values should not parse in `font-variant` shorthand when disabled
    https://bugs.webkit.org/show_bug.cgi?id=268348
    rdar://121890028

    Reviewed by Matthieu Dubet.

    `font-variant: emoji` or `font-variant: unicode` should not parse when `font-variant-emoji` is disabled.

    * LayoutTests/fast/css/font-variant-emoji-disabled-expected.txt: Added.
    * LayoutTests/fast/css/font-variant-emoji-disabled.html: Added.
    * Source/WebCore/css/parser/CSSPropertyParser.cpp:
    (WebCore::CSSPropertyParser::consumeFontVariantShorthand):

    Canonical link: https://commits.webkit.org/273710@main

Identifier: 272448.430@safari-7618-branch